# eink-bridge

./: .gitignore  README.md  flake.nix
android/: settings.gradle.kts  shell.nix
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/flakm/einkbridge/: MainActivity.kt  PenOverlay.kt  SessionAdapter.kt
android/app/src/main/res/layout/: activity_main.xml  item_session.xml
android/app/src/main/res/values/: strings.xml  themes.xml
server/: Cargo.toml
server/src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  mock_device.rs  render.rs  session.rs
server/tests/: cli_integration_test.rs  e2e_test.rs  health_test.rs  long_poll_test.rs  session_lifecycle_test.rs
server/tests/common/: mod.rs
